--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,7 +5,14 @@
 @import "blocks/button.scss";
 @import "blocks/section-title.scss";
 @import "blocks/secion-lead.scss";
+@import "blocks/slider.scss";
+@import "blocks/social.scss";
 @import "blocks/header.scss";
 @import "blocks/pets.scss";
 @import "blocks/breed.scss";
 @import "blocks/advantages.scss";
+@import "blocks/care.scss";
+@import "blocks/team.scss";
+@import "blocks/faq.scss";
+@import "blocks/reviews.scss";
+@import "blocks/footer.scss";
