--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -15,12 +15,31 @@
 
 .header__logo {
   align-self: center;
+
+  &:hover,
+  &:focus {
+    .header__logo-icon {
+      fill: $white;
+    }
+  }
 }
 
 .header__social {
   position: absolute;
   bottom: 64px;
   left: -52px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header__social-item {
+  &:not(:last-child) {
+    margin-right: 0;
+  }
+}
+
+.header__social-link {
+  display: inline;
 }
 
 .header__social::before {
