--- a/source/sass/utils/global.scss
+++ b/source/sass/utils/global.scss
@@ -34,9 +34,11 @@ img {
 
 .social,
 .pets__list,
-.slider,
+.slider__list,
 .breed__list,
-.advantages__list {
+.advantages__list,
+.care__list,
+.faq__list {
   padding: 0;
   margin: 0;
   list-style: none;
