--- a/source/sass/blocks/care.scss
+++ b/source/sass/blocks/care.scss
@@ -8,7 +8,11 @@
 
 .care__list {
   display: grid;
-  grid-template-columns: 558px 558px;
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 558px 558px;
+  }
+
   justify-content: space-between;
   row-gap: 40px;
   margin-top: 50px;
