--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -10,5 +10,7 @@ $dark-gray: #181617;
 $medium-gray: #1f1c1d;
 $medium-brown: #a07b50;
 
+$mobile-width: 320px;
+$tablet-width: 768px;
 $desktop-width: 1366px;
 
