--- a/source/sass/utils/wrapper.scss
+++ b/source/sass/utils/wrapper.scss
@@ -1,4 +1,13 @@
 .wrapper {
-  max-width: 1160px;
-  margin: 0 auto;
+  padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+    max-width: 1160px;
+    margin: 0 auto;
+  }
 }
