--- a/source/sass/blocks/secion-lead.scss
+++ b/source/sass/blocks/secion-lead.scss
@@ -1,6 +1,13 @@
 .section-lead {
+  font-size: 14px;
+  line-height: 19px;
   margin: 0;
   text-align: center;
   font-weight: 300;
   color: $medium-brown;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
