--- a/source/sass/blocks/section-title.scss
+++ b/source/sass/blocks/section-title.scss
@@ -2,6 +2,11 @@
   margin: 0;
   text-align: center;
   font-family: $font-family-optional;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: 32px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 42px;
+  }
 }
