--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,3 +1,30 @@
 .slider {
   position: relative;
 }
+
+.slider__button {
+  position: absolute;
+  top: 50%;
+  width: 15px;
+  height: 30px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  opacity: 0.5;
+
+  &--prev {
+    left: 0;
+    @media (min-width: $tablet-width) {
+      transform: translateX(-100%);
+    }
+    background-image: url("../img/arrowPrev.svg");
+  }
+
+  &--next {
+    right: 0;
+    @media (min-width: $tablet-width) {
+      transform: translateX(100%);
+    }
+    background-image: url("../img/arrowNext.svg");
+  }
+}
