--- a/source/sass/blocks/breed.scss
+++ b/source/sass/blocks/breed.scss
@@ -1,10 +1,13 @@
 .breed {
   padding-top: 40px;
   padding-bottom: 100px;
+
+  @media(max-width: $tablet-width-only) {
+    padding-top: 45px;
+  }
 }
 
 .breed__wrapper {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,6 +26,10 @@
   }
 }
 
+.breed__inner {
+  position: relative;
+}
+
 .breed__picture {
   position: relative;
   &::before,
@@ -39,6 +46,7 @@
     @media (min-width: $tablet-width) {
       width: 420px;
       height: 420px;
+      left: -16px;
     }
 
     @media (min-width: $desktop-width) {
@@ -55,11 +63,15 @@
     @media (min-width: $tablet-width) {
       width: 340px;
       height: 340px;
+      top: 84px;
+      left: 26px;
     }
 
     @media (min-width: $desktop-width) {
       width: 520px;
       height: 520px;
+      top: 100px;
+      left: 39px;
     }
 
     background-color: $deep-black;
@@ -77,46 +89,75 @@
   &::after {
     content: "";
     position: absolute;
-    right: -40px;
+    top: 0;
+    right: -30px;
     width: 15px;
     height: 15px;
     border-radius: 50%;
     background-color: $medium-brown;
+
+    @media (max-width: $tablet-width-only) {
+      right: -30px;
+    }
   }
 
   &--cohabitation {
     width: 280px;
-    top: 340px;
-    left: -5px;
+    top: 220px;
+    left: -290px;
     text-align: right;
+
+    @media (max-width: $tablet-width-only) {
+      width: 150px;
+      top: 140px;
+      left: -160px;
+    }
   }
 
   &--appearance {
     width: 220px;
     text-align: right;
-    left: 65px;
+    left: -240px;
     bottom: 150px;
+
+    @media (max-width: $tablet-width-only) {
+      width: 150px;
+      bottom: 10px;
+      left: -155px;
+    }
   }
 
   &--training {
     width: 210px;
-    right: 0;
-    bottom: 330px;
+    right: -245px;
+    bottom: 285px;
 
     &::after {
       right: 0;
-      left: -40px;
+      left: -30px;
+    }
+
+    @media (max-width: $tablet-width-only) {
+      width: 132px;
+      right: -160px;
+      bottom: 120px;
     }
   }
 
   &--weight {
     width: 170px;
-    right: 95px;
-    bottom: 100px;
+    right: -160px;
+    bottom: 95px;
 
     &::after {
       right: 0;
-      left: -40px;
+      left: -30px;
+    }
+
+    @media (max-width: $tablet-width-only) {
+      width: 115px;
+      right: -90px;
+      bottom: -15px;
     }
   }
 }
