--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -14,3 +14,6 @@ $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1366px;
 
+$mobile-width-only: (768 - 1)px;
+$tablet-width-only: 1366px - 1px;
+
